--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <h1><a href="/">WebStudio</a></h1>
       <nav>
         <ul>
-          <li><a>Студія</a></li>
-          <li><a>Портфоліо</a></li>
-          <li><a>Контакти</a></li>
+          <li><a href="/">Студія</a></li>
+          <li><a href="#">Портфоліо</a></li>
+          <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
       <section>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+          <li><a href="tel:+38096111111">+380961111111</a></li>
         </ul>
       </section>
     </header>
@@ -64,25 +64,25 @@
         <ul>
           <li>
             <img
-              width="370px"
-              height="294px"
-              src="./images/img (1).jpg"
+              width="370"
+              height="294"
+              src="./images/img_1.jpg"
               alt="Робочій стіл з папірцями та ремоут клавітурою, з окремим екраном-планшетом, на якій працює програміст, набираючи код."
             />
           </li>
           <li>
             <img
-              width="370px"
-              height="294px"
-              src="./images/img (2).jpg"
+              width="370"
+              height="294"
+              src="./images/img_2.jpg"
               alt="Людина працює за ноутбуком, з телефоном у руці, адаптуючи сайт під мобільний пристрій."
             />
           </li>
           <li>
             <img
-              width="370px"
-              height="294px"
-              src="./images/img (3).jpg"
+              width="370"
+              height="294"
+              src="./images/img_3.jpg"
               alt="Планшет у жіночих руках, на якому обирають колір з палітри кольорів у формі стільників"
             />
           </li>
@@ -93,8 +93,8 @@
         <ul>
           <li>
             <img
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
               src="./images/img.jpg"
               alt="Молодий чорнявий чоловік в окулярах та короткою бородою у темно-червоній сорочці."
             />
@@ -103,8 +103,8 @@
           </li>
           <li>
             <img
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
               src="./images/img-1.jpg"
               alt="Молода білява дівчина в окулярах та чорному піджаку."
             />
@@ -113,8 +113,8 @@
           </li>
           <li>
             <img
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
               src="./images/img-2.jpg"
               alt="Молодий чорнявий чоловік з щетиною у білій сорочці."
             />
@@ -123,8 +123,8 @@
           </li>
           <li>
             <img
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
               src="./images/img-3.jpg"
               alt="Молодий чорнявий чоловік з короткою бородою у чорній футболці."
             />
@@ -135,17 +135,17 @@
       </section>
     </main>
     <footer>
-      <h2>WebStudio</h2>
+      <h2><a href="/">WebStudio</a></h2>
       <section>
         <ul>
           <li>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <address>м. Київ, пр-т Лесі Українки, 26</address>
           </li>
           <li>
             <p>info@devstudio.com</p>
           </li>
           <li>
-            <p>+38 096 111 11 11</p>
+            <p>+380961111111</p>
           </li>
         </ul>
       </section>
