fix after mentor review

--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">WebStudio</a></h1>
       <nav>
+        <a href="/">WebStudio</a>
         <ul>
           <li><a href="/">Студія</a></li>
           <li><a href="#">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <section>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+38096111111">+380961111111</a></li>
-        </ul>
-      </section>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
-        <h2>Ефективні рішення для вашого бізнесу</h2>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>Наші переваги</h2>
         <ul>
           <li>
             <h3>Увага до деталей</h3>
@@ -135,20 +134,25 @@
       </section>
     </main>
     <footer>
-      <h2><a href="/">WebStudio</a></h2>
-      <section>
+      <a href="/">WebStudio</a>
+      <address>
         <ul>
           <li>
-            <address>м. Київ, пр-т Лесі Українки, 26</address>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Украінки, 26</a
+            >
           </li>
           <li>
-            <p>info@devstudio.com</p>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <p>+380961111111</p>
+            <a href="tel:+38096111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </section>
+      </address>
     </footer>
   </body>
 </html>
